--- a/hyperkitty/templates/hyperkitty/user_public_profile.html
+++ b/hyperkitty/templates/hyperkitty/user_public_profile.html
@@ -14,6 +14,10 @@
 
     <h1>{% trans "User profile" %} <small>{% trans "for" %} {{ fullname }}</small></h1>
 
+    {% if is_user %}
+    <p>This is you. <a href="{% url 'hk_user_profile' %}">Edit your private profile</a>.</p>
+    {% endif %}
+
     <table class="table table-bordered table-striped user-data">
         <tbody>
             <tr>
