--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -128,15 +128,19 @@
         </div> <!-- /container for navbar -->
     </nav>
 
-    {% if flash_messages %}
+    {% if messages %}
     <div class="flashmsgs">
-    {% for flash_msg in flash_messages %}
+    {% for msg in messages %}
         <div class="flashmsg-wrapper">
-            <div class="alert alert-{{ flash_msg.type }}">
-            {% if flash_msg.type != "success" %}
+            <!--<div class="alert alert-{{ msg.level_tag }} {{ msg.extra_tags }}">-->
+            <div class="alert {{ msg.tags }}
+                {% if msg.level == 25 %} {# "success" level. For Django >= 1.7, use DEFAULT_MESSAGE_LEVELS #}
+                ">
+                {% else %}
+                alert-dismissible">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {% endif %}
-            {{ flash_msg.msg }}
+                {% endif %}
+            {{ msg }}
             </div>
         </div>
     {% endfor %}
