Restore the display of tags in the threads list

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-index.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-index.scss
@@ -142,6 +142,7 @@ $headerNavPadding: 7px;
     }
 
     ul.list-stats {
+        font-size: 90%;
         li:first-child {
             padding-right: 1em;
         }
