--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-overview.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-overview.scss
@@ -56,7 +56,10 @@
         padding-right: 0.5em;
     }
     .category {
-        font-size: 65%;
+        font-size: 70%;
+    }
+    .list-stats {
+        font-size: 90%;
     }
 }
 
