--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -215,27 +215,29 @@
 
         <section id="actions" class="col-tn-12 col-xs-6 col-sm-12">
             <h3>{% trans "Actions" %}</h3>
-            <!-- Subscription -->
-            {% if postorius_installed %}
-            <p>
-              <a class="btn btn-default btn-sm" href="{{ postorius_installed }}/{{ mlist.name }}">
-                <i class="fa fa-inbox"></i>
-                Manage subscription</a>
-            </p>
-            {% endif %}
-            <!-- Download as mbox -->
-            <div class="btn-group">
-                <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                    {% trans "Download as mbox" %} <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a href="{{ export.recent }}">{% trans "Past 30 days" %}</a></li>
-                    <li><a href="{{ export.month }}">{% trans "This month" %}</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="{% url 'hk_list_export_mbox' mlist_fqdn=mlist.name filename=mlist.name %}">{% trans "Entire archive" %}</a></li>
-                </ul>
-            </div>
+            <ul class="list-inline">
+                <!-- Subscription -->
+                {% if postorius_installed %}
+                <li><a class="btn btn-default btn-sm" href="{{ postorius_installed }}/{{ mlist.name }}">
+                  <i class="fa fa-inbox"></i>
+                  Manage subscription</a></li>
+                {% endif %}
+                <!-- Download as mbox -->
+                <li><div class="btn-group">
+                    <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-download"></i>
+                        {% trans "Download" %} <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ export.recent }}">{% trans "Past 30 days" %} <small>(mbox)</small></a></li>
+                        <li><a href="{{ export.month }}">{% trans "This month" %} <small>(mbox)</small></a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="{% url 'hk_list_export_mbox' mlist_fqdn=mlist.name filename=mlist.name %}">
+                            {% trans "Entire archive" %} <small>(mbox)</small></a></li>
+                    </ul>
+                </div></li>
+            </ul>
         </section>
 
         </div>
