--- a/hyperkitty/templates/hyperkitty/threads/month_list.html
+++ b/hyperkitty/templates/hyperkitty/threads/month_list.html
@@ -57,15 +57,32 @@
 </div>
 
 
-{% if mlist and pagename != 'overview' %}
+{% if mlist %}
 <div class="row">
+    {% if pagename != 'overview' %}
     <p><a href="{% url 'hk_list_overview' mlist_fqdn=mlist.name %}"
        class="btn btn-default btn-sm">
        <span class="fa fa-backward"></span>
        {% trans "List overview" %}</a></p>
+    {% endif %}
 
     <!-- Download as mbox -->
-    {% if export %}
+    {% if pagename == 'overview' %}
+    <div class="btn-group">
+        <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-download"></i>
+            {% trans "Download" %} <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="{{ export.recent }}">{% trans "Past 30 days" %} <small>(mbox)</small></a></li>
+            <li><a href="{{ export.month }}">{% trans "This month" %} <small>(mbox)</small></a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="{% url 'hk_list_export_mbox' mlist_fqdn=mlist.name filename=mlist.name %}">
+                {% trans "Entire archive" %} <small>(mbox)</small></a></li>
+        </ul>
+    </div>
+    {% elif export %}
     <p><a href="{{ export.url }}" title="{{ export.title }}"
         class="btn btn-default btn-sm">
         <i class="fa fa-download"></i> {{ export.message }}</a>
