--- a/hyperkitty/templates/hyperkitty/messages/summary_message.html
+++ b/hyperkitty/templates/hyperkitty/messages/summary_message.html
@@ -5,51 +5,51 @@
         <div class="thread">
             <div>
                 <span class="thread-title">
-                    <a name="{{message.message_id_hash}}"
-                       href="{% url 'hk_message_index' mlist_fqdn=message.mailinglist_id message_id_hash=message.message_id_hash %}"
-                       >{{ message.subject|strip_subject:mlist }}</a></span>
-                <span class="thread-date">{{ message.date|timesince }}</span>
+                    <a name="{{email.message_id_hash}}"
+                       href="{% url 'hk_message_index' mlist_fqdn=email.mailinglist_id message_id_hash=email.message_id_hash %}"
+                       >{{ email.subject|strip_subject:mlist }}</a></span>
+                <span class="thread-date">{{ email.date|timesince }}</span>
             </div>
             <div class="thread-info row">
                 <div class="thread-content col-tn-12 col-xs-10 col-lg-11">
                     <div class="thread-email">
                         <span class="expander collapsed">
-                            {{ message.content|urlizetrunc:76|escapeemail }}
+                            {{ email.content|urlizetrunc:76|escapeemail }}
                         </span>
                     </div>
                 </div>
                 <div class="gravatar col-tn-3 col-xs-2 col-lg-1">
-                    {% if message.sender.mailman_id %}
-                    <a href="{% url 'hk_public_user_profile' user_id=message.sender.mailman_id %}"
+                    {% if email.sender.mailman_id %}
+                    <a href="{% url 'hk_public_user_profile' user_id=email.sender.mailman_id %}"
                        title="{% blocktrans with name=email.sender.name|escapeemail|escape %}See the profile for {{ name }}{% endblocktrans %}">
                     {% endif %}
-                    {% if message.sender.address %}
-                    {% gravatar message.sender.address 120 %}
+                    {% if email.sender.address %}
+                    {% gravatar email.sender.address 120 %}
                     <br />
                     {% endif %}
-                    {{ message.sender.name|escapeemail }}
-                    {% if message.sender.mailman_id %}
+                    {{ email.sender.name|escapeemail }}
+                    {% if email.sender.mailman_id %}
                     </a>
                     {% endif %}
                 </div>
                 <div class="thread-extras col-tn-9 col-xs-10 col-lg-11">
                     {% if use_mockups %}
                     <div class="thread-category col-tn-12 col-xs-6 col-sm-3">
-                        {% include 'hyperkitty/threads/category.html' with category=message.category_hk category_form=message.category_form thread=message.thread %}
+                        {% include 'hyperkitty/threads/category.html' with category=email.category_hk category_form=email.category_form thread=email.thread %}
                     </div>
                     {% endif %}
                     <div class="col-tn-12 col-xs-6 col-sm-4">
-                        {% include "hyperkitty/messages/like_form.html" with message_id_hash=message.message_id_hash object=message %}
+                        {% include "hyperkitty/messages/like_form.html" with message_id_hash=email.message_id_hash object=email %}
                     </div>
                 </div>
             </div>
             <div class="thread-info">
-                {% if message.tags|length %}
+                {% if email.tags|length %}
                 {% trans "Tags:" %}
                 <ul class="list-unstyled tags">
-                {% for tag in message.tags %}
+                {% for tag in email.tags %}
                     <li>
-                        <a href="{#% url 'hk_search_tag' mlist_fqdn=message.mailinglist_id tag=tag.tag %#}">{{tag.tag}}</a>
+                        <a href="{#% url 'hk_search_tag' mlist_fqdn=email.mailinglist_id tag=tag.tag %#}">{{tag.tag}}</a>
                     </li>
                 {% endfor %}
                 </ul>
