Move the send-as dropbox to the bottom of the form

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-message.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-message.scss
@@ -155,10 +155,6 @@ $oddEmailColor: rgb(238, 238, 238);
                 font-size: 90%;
                 font-weight: normal;
             }
-            select {
-                display: inline;
-                width: auto;
-            }
         }
         p { margin: 0; }
         #id_subject {
@@ -166,6 +162,13 @@ $oddEmailColor: rgb(238, 238, 238);
         }
         #id_message {
             margin-bottom: 0.25em;
+        }
+        .send-as select {
+            display: none;
+            width: auto;
+        }
+        .send-as .send-as-add-address {
+            margin-left: 1em;
         }
         p.buttons {
             margin-top: 1em;
