--- a/hyperkitty/templates/hyperkitty/messages/message.html
+++ b/hyperkitty/templates/hyperkitty/messages/message.html
@@ -134,15 +134,33 @@
                 <ul class="list-inline reply-tools">
                     <li><a class="btn btn-sm btn-default quote" href="#">{% trans "Quote" %}</a></li>
                     <li class="checkbox"><label>{{ reply_form.newthread }} {% trans "Create new thread" %}</label></li>
-                    <li><label for="{{ reply_form.sender.id_for_label }}">{% trans "Sent as:" %}</label>
-                        {{ reply_form.sender }}</li>
                     <li><a class="btn btn-sm btn-default reply-mailto"
                        href="mailto:{{ email.mailinglist.name }}?Subject={{ email.subject|reply_subject|urlencode }}&amp;In-Reply-To=&lt;{{ email.message_id|urlencode }}&gt;"
                        >{% trans 'Use email software' %}</a></li>
                 </ul>
                 {{ reply_form.non_field_errors }}
+
                 <p>{{ reply_form.subject }} {{ reply_form.subject.errors}}</p>
                 <p>{{ reply_form.message }} {{ reply_form.message.errors}}</p>
+
+                <p class="text-muted send-as">
+                    {% trans "This reply will be sent as:" %}
+                    <a href="" class="send-as-default" title="{% trans 'Change sender' %}">
+                        {{ reply_form.sender.value }}</a>
+                    {{ reply_form.sender }}
+                    {% if postorius_installed %}
+                    {% comment %}
+                        Open a new window to Postorius. I know it's bad behavior
+                        but there's a big risk of a user loosing the message they
+                        are composing.
+                    {% endcomment %}
+                    <a href="{{ postorius_installed }}/users/address_activation/"
+                       target="_blank" class="send-as-add-address">
+                        {% trans "Link another address" %}
+                        <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                    {% endif %}
+                </p>
+
                 <p class="buttons">
                     <button type="submit" class="submit btn btn-primary">{% trans "Send" %}</button>
                     {% trans "or" %} <a class="cancel" href="#">{% trans "cancel" %}</a>
