Add the send-as widget to the new thread form

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -208,6 +208,15 @@ div#months-list {
 }
 
 
+//=== 'Send as' widget in replies or new threads ===/
+.send-as select {
+    display: none;
+    width: auto;
+}
+.send-as .send-as-add-address {
+    margin-left: 1em;
+}
+
 //=== Attachments in replies or new threads ===/
 .attach-files-template {
     display: none;
