--- a/hyperkitty/templates/hyperkitty/messages/message.html
+++ b/hyperkitty/templates/hyperkitty/messages/message.html
@@ -143,23 +143,7 @@
                 <p>{{ reply_form.subject }} {{ reply_form.subject.errors}}</p>
                 <p>{{ reply_form.message }} {{ reply_form.message.errors}}</p>
 
-                <p class="text-muted send-as">
-                    {% trans "This reply will be sent as:" %}
-                    <a href="" class="send-as-default" title="{% trans 'Change sender' %}">
-                        {{ reply_form.sender.value }}</a>
-                    {{ reply_form.sender }}
-                    {% if postorius_installed %}
-                    {% comment %}
-                        Open a new window to Postorius. I know it's bad behavior
-                        but there's a big risk of a user loosing the message they
-                        are composing.
-                    {% endcomment %}
-                    <a href="{{ postorius_installed }}/users/address_activation/"
-                       target="_blank" class="send-as-add-address">
-                        {% trans "Link another address" %}
-                        <i class="fa fa-external-link" aria-hidden="true"></i></a>
-                    {% endif %}
-                </p>
+                {% include "hyperkitty/fragments/send_as.html" with form=reply_form %}
 
                 <p class="buttons">
                     <button type="submit" class="submit btn btn-primary">{% trans "Send" %}</button>
