--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -88,6 +88,7 @@ h1 {
     left: 0;
     width: 100%;
     text-align: center;
+    z-index: 10;
     .flashmsg-wrapper {
         display: block;
     }
